# rtty-soda

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Dockerfile-tools  LICENSE  README.j2  README.md  mypy.ini  pylintrc.toml  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml
diagram/: dd.drawio  kdf.drawio  soda.drawio
docker/: Dockerfile  Dockerfile-tools  bin.env  ru.env  unset.sh  vimrc
docs/: README.j2  example.env  message  телеграмма
src/rtty_soda/: archivers.py  cli_io.py  formatters.py  interfaces.py  main.py  main.pyi  totp.py
src/rtty_soda/cli/: __init__.py  cli_options.py  cli_reader.py  cli_types.py  cli_writer.py  main.py  main.pyi
src/rtty_soda/cryptography/: kdf.py  public.py  secret.py
src/rtty_soda/encoders/: __init__.py  base10_encoder.py  base26_encoder.py  base31_encoder.py  base32_encoder.py  base36_encoder.py  base64_encoder.py  base94_encoder.py  concrete.py  encoder.py  encoder_base.py  functions.py  raw_encoder.py  scsu.py  scsu_stubs.pyi
src/rtty_soda/services/: __init__.py  encoding_service.py  encryption_service.py  key_service.py  service.py
stubs/brotli/: __init__.pyi
stubs/scsu/codecs/: decoder.pyi  encoder.pyi
tests/: test_assumptions.py  test_cli.py  test_encoders.py  test_main.py
