[project]
name = "rtty-soda"
version = "0.3.8"
description = "A CLI tool for Unix-like environments to encrypt a RTTY session using NaCl"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Theo Saveliev", email = "89431871+theosaveliev@users.noreply.github.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]

keywords = ["cli", "encryption", "libsodium", "nacl", "rtty"]

requires-python = ">=3.14,<4.0"

dependencies = [
    "brotli>=1.2.0,<2.0.0",
    "pynacl>=1.6.0,<2.0.0",
    "scsu>=1.1.1,<2.0.0",
]

[project.optional-dependencies]
cli = ["click>=8.3.0,<9.0.0", "click-aliases>=1.0.5,<2.0.0"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7,<2.0.0",
    "jinja2-cli[toml]>=0.8.2,<0.9.0",
    "jinja2-shell-extension>=2.1.1,<3.0.0",
    "mypy>=1.18.2,<2.0.0",
    "poethepoet>=0.37.0,<0.38.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.14.1,<0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
soda = "rtty_soda.cli.main:cli"

[project.urls]
github = "https://github.com/theosaveliev/rtty-soda"
issues = "https://github.com/theosaveliev/rtty-soda/issues"

[tool.uv]
add-bounds = "major"

[tool.uv.build-backend]
source-exclude = [
    ".env",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    ".DS_Store",
    ".idea",
    ".vscode",
]

wheel-exclude = [
    ".env",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    ".DS_Store",
    ".idea",
    ".vscode",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
format = "ruff format"
lint = "ruff check --fix ."
mypy = "mypy ."
pyright = "basedpyright ."
test = "pytest"
readme = "jinja2 --extension=jinja2_shell_extension.ShellExtension docs/README.j2 pyproject.toml --outfile README.md"
dev = ["format", "lint", "mypy", "pyright"]
pre-build = ["dev", "test", "readme"]
docker = ["docker-build", "docker-push"]

[tool.poe.tasks.docker-build]
shell = """
    IMAGE_TAG=nett/rtty-soda:$(uv version --short)
    PLATFORM=linux/amd64,linux/arm64/v8
    docker build --tag ${IMAGE_TAG} --platform ${PLATFORM} --file docker/Dockerfile --no-cache docker
    docker build --tag ${IMAGE_TAG}-tools --platform ${PLATFORM} --file docker/Dockerfile-tools --no-cache docker
"""

[tool.poe.tasks.docker-push]
shell = """
    IMAGE_TAG=nett/rtty-soda:$(uv version --short)
    docker image push ${IMAGE_TAG}
    docker image push ${IMAGE_TAG}-tools
"""
